# cyber_range

./: .env.example  .gitignore  INSTALLATION_COMPLETE.txt  Makefile  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICK_START.md  README.md  complete_project_setup.sh  docker-compose.yml  finalize_project.py  generate_project.py  manifest.json  overview.md
.github/workflows/: ci.yml
backend/: alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_07_1345-308b05d33cbe_initial_schema.py
backend/app/api/v1/: auth.py  logs.py  scenarios.py  scoring.py  topology.py  users.py  vms.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: role.py  scenario.py  user.py  virtual_machine.py
backend/app/workers/: tasks.py
backend/scripts/: seed_data.py
db/: er_diagram.mmd  init.sql
docs/: architecture.md  deploy.md  security.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/features/: store.ts
frontend/src/services/: api.ts
frontend/src/styles/: index.css
infra/ansible/playbooks/: proxmox_setup.yml  sensor_install.yml
infra/docker/: backend.Dockerfile
infra/kubernetes/helm/: values.yaml
infra/terraform/: main.tf
replay/: pcap_processor.py
siem/elasticsearch/index_templates/: sysmon.json
siem/kibana/dashboards/: attack_timeline.ndjson
siem/logstash/pipelines/: sysmon.conf
(+27 files in other folders)
